improve domain model to use sealed
