# src/main/java/com/ohpen/midoffice/configtracker/api/dto/ChangeRequest.java
@@ -1,7 +1,7 @@
 package com.ohpen.midoffice.configtracker.api.dto;
 
 import com.ohpen.midoffice.configtracker.domain.model.ChangeOperation;
-import com.ohpen.midoffice.configtracker.domain.model.RulePayload;
+import com.ohpen.midoffice.configtracker.domain.model.Rule;
 import com.ohpen.midoffice.configtracker.domain.model.RuleType;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
@@ -10,5 +10,7 @@ public record ChangeRequest(
     @NotNull RuleType type,
     @NotNull ChangeOperation operation,
     @NotBlank String actor,
-    @NotNull RulePayload payload
+    Rule payload,        // for ADD or DELETE
+    Rule oldPayload,     // for UPDATE
+    Rule newPayload      // for UPDATE
 ) {}
